Milestone 4: added overview overflow, background, general fixes
to fix language flag position

--- a/css/main.css
+++ b/css/main.css
@@ -12,24 +12,51 @@
 
 div.contentBox {
     display: flex;
-    width: 90vw;
-    height: 80vh;
+    flex-direction: column;
+    background-color: black;
+    width: 100%;
+    height: 100vh;
 }
-
+/*  regole search bar */
 div.searchBar {
+    width: 100%;
     display: flex;
     align-self: center;
+    background-color: black;
+    justify-content: space-between;
 }
 
+div.searchBar h1 {
+    width: 100px;
+    height: auto;
+    color: red;
+    text-shadow:1px 1px black;
+}
+
+div.searchBar div.input input{
+    height: 100%;
+    font-size: 20px;
+}
+
+div.searchBar div.input button {
+    height: 100%;
+}
+
+/*  regole card box */
 div.cardBox {
     display: flex;
+    justify-content: center;
+    align-self: center;
     flex-wrap: wrap;
+    background-color: black;
+    
 }
 
 div.cardBox div.mediaCard {
     display: flex;
     position: relative;
     flex-direction: column;
+    color: white;
     margin: 15px;
     padding: 10px;
     width: 350px;
@@ -68,4 +95,10 @@ div.overview {
     min-height: 200px;
     padding: 10px;
     overflow: auto;
+}
+
+div.infoCard {
+    display: flex;
+    position: absolute;
+    bottom: 0;
 }
